--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meu documento</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <script defer src="assets/js/scripts.js"></script>
 </head>
 <body>
+
+    <video id="video" width="720px" height="560px" autoplay muted ></video>
     
 </body>
 </html>
