Detecta com modelos

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meu documento</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/face-api.min.js"></script>
     <script defer src="assets/js/scripts.js"></script>
 </head>
 <body>
-
-    <video id="video" width="720px" height="560px" autoplay muted ></video>
-    
+    <video id="video" width="720px" height="560px" autoplay muted ></video>  
 </body>
 </html>
