--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Meu documento</title>
+    <title>Detecção facial de emoções por reconhecimento facial</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/face-api.min.js"></script>
     <script defer src="assets/js/scripts.js"></script>
 </head>
 <body>
-    <video id="video" width="720px" height="560px" autoplay muted ></video>  
+    <video style="visibility: visible;" id="video" width="720px" height="560px" autoplay muted ></video>  
 </body>
 </html>
